{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 39,
  "lineage": "4d6e1188-2187-11e9-c0f7-b3f2702ca09e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a2922713a0831052",
            "domain": "vpc",
            "id": "eipalloc-0ed77f2f088e8d94a",
            "instance": "i-0962f4d5c5f543e7b",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e7615a57f74f2b58",
            "private_dns": "ip-10-1-1-130.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.130",
            "public_dns": "ec2-54-248-10-219.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.10.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.admin",
            "aws_subnet.public-a",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01748a72bed07727c",
            "arn": "arn:aws:ec2:ap-northeast-1:857296054361:instance/i-0962f4d5c5f543e7b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0c4a19492d0ee0746",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0962f4d5c5f543e7b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_access_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7615a57f74f2b58",
            "private_dns": "ip-10-1-1-130.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.130",
            "public_ip": "52.68.106.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f08c307dce75015d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07db8d1100cdd9228",
            "tags": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01fe6704a84119423"
            ]
          },
          "dependencies": [
            "aws_security_group.admin",
            "aws_subnet.public-a",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857296054361:internet-gateway/igw-0c308cc5426b99f7d",
            "id": "igw-0c308cc5426b99f7d",
            "owner_id": "857296054361",
            "vpc_id": "vpc-0774805729e328db0"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-072d8ddd003408f1d",
            "owner_id": "857296054361",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c308cc5426b99f7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0774805729e328db0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myGW",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "puclic-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ffb34c5f0dbf6b7",
            "route_table_id": "rtb-072d8ddd003408f1d",
            "subnet_id": "subnet-07db8d1100cdd9228"
          },
          "dependencies": [
            "aws_internet_gateway.myGW",
            "aws_route_table.public-route",
            "aws_subnet.public-a",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857296054361:security-group/sg-01fe6704a84119423",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fe6704a84119423",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "admin",
            "name_prefix": "",
            "owner_id": "857296054361",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0774805729e328db0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857296054361:subnet/subnet-07db8d1100cdd9228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-07db8d1100cdd9228",
            "map_public_ip_on_launch": false,
            "owner_id": "857296054361",
            "vpc_id": "vpc-0774805729e328db0"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857296054361:vpc/vpc-0774805729e328db0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05dfffa7f9a269483",
            "default_route_table_id": "rtb-09429f824b393df72",
            "default_security_group_id": "sg-0ca3de24248df2a3c",
            "dhcp_options_id": "dopt-e74c1680",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0774805729e328db0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09429f824b393df72",
            "owner_id": "857296054361",
            "tags": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}